--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@
 *.pth.tar
 # Datasets -------------------------------------------------------------------------------------------------------------
 datasets/coco/
-nas_backbones/
+#nas_backbones/
 configs/
 scripts/
 # MATLAB GitIgnore -----------------------------------------------------------------------------------------------------
