--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-timm
-omegaconf
-numpy
-opencv_python
-loguru
-scikit-image
-tqdm
-Pillow
-thop
-tabulate
-easydict
+timm==0.4.12
+omegaconf==2.3.0
+numpy==1.26.4
+opencv_python==4.9.0.80
+loguru==0.7.2
+scikit-image==0.24.0
+tqdm==4.66.5
+Pillow==10.4.0
+thop==0.1.1.post2209072238
+tabulate==0.9.0
+easydict==1.13
